- Added recent voted transaction - Fixed issues with migration. - Worked on fixing some layout issues.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,12 +30,12 @@ h1, h2, h3, h4, h5, h6 {
 	}
 
 .footer {
-  position: absolute;
+  position: all;
   bottom: 0px;
   width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+  height: 60px;  /*Set the fixed height of the footer here */
+  line-height: 60px;  /*Vertically center the text there 
+*/background-color: #f5f5f5;
 }
 
 	
